# DesignPatterns

./: README.md
CPP/: AbstractFactory.cpp  Adapter.cpp  Bridge.cpp  Builder.cpp  CMakeLists.txt  ChainofResponsibility.cpp  Command.cpp  Composite.cpp  Decorator.cpp  Facade.cpp  Factory.cpp  Flyweight.cpp  Interpreter.cpp  Iterator.cpp  Mediator.cpp  Memento.cpp  Observer.cpp  Prototype.cpp  Proxy.cpp  SimpleFactory.cpp  Singleton.cpp  State.cpp  Strategy.cpp  Template.cpp  Visitor.cpp  factory.cpp
Kotlin/: ChainOfResponsibility.kt  Mediator.kt  Prototype.kt
Python/: AbstractFactory.py  Adapter.py  Bridge.py  Builder.py  ChainofResponsibility.py  Command.py  Composite.py  Decorator.py  Facade.py  Factory.py  Flyweight.py  Memento.py  Observer.py  Prototype.py  Proxy.py  SimplyFactory.py  Singleton.py  Strategy.py  Template.py  main.py
Python/DesignPattern/: facade.py  template.py
